# dot

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: config.rs  main.rs
